[package]
name = "cwmanage"
version = "0.1.0"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = {"version" = "0.11.1", "features" = ["blocking"]}
serde = {"version" = "1.0.123", "features"=["derive"]}
serde_json = "1.0.63"
url = "2.2.1"

[dev-dependencies]
dotenv = "0.15.0"
