[package]
name = "cwmanage"
version = "0.1.8"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple crate to help with the Connectwise Manage API"
homepage = "https://github.com/zpeters/cwmanage"
documentation = "https://docs.rs/cwmanage"
readme = "README.md"
repository = "https://github.com/zpeters/cwmanage"
keywords = ["learning", "connectwise"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
reqwest = { "version" = "0.11.11", "features" = ["blocking"] }
serde = { "version" = "1.0.139", "features" = ["derive"] }
serde_json = "1.0.82"
strum = "0.26.1"
strum_macros = "0.24.2"
url = "2.2.2"


[dev-dependencies]
dotenv = "0.15.0"
pretty_assertions = "1.2.1"